--- a/src/modules/header/Header.scss
+++ b/src/modules/header/Header.scss
@@ -1,6 +1,6 @@
 .header {
     padding: 10px 30px;
-    background-color: #8BC34A;
+    background-color: #1b5e20;
 
     &__row {
         display: flex;
